<resources>
    <string name="app_name">Petagram</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="menu_star">Abrir Five</string>
    <string name="contact_name">Nombre</string>
    <string name="contact_email">Correo electrónico</string>
    <string name="contact_message">Mensaje</string>
    <string name="contact_button">Enviar Comentario</string>
    <string name="contact_us">CONTÁCTANOS</string>
    <string name="dev_name">Amadeus</string>
    <string name="dev_desc">CS Student from Perú.</string>
    <string name="cat_name">Rose</string>

</resources>