<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:orientation="vertical">

    <include android:id="@+id/myActionBar"
        layout="@layout/my_action_bar">
    </include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_right_left"
        android:layout_marginRight="@dimen/margin_right_left"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_right_left"
        android:layout_marginRight="@dimen/margin_right_left"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_right_left"
        android:layout_marginRight="@dimen/margin_right_left"/>

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_message"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_right_left"
        android:layout_marginRight="@dimen/margin_right_left"/>

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_button"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_right_left"
        android:layout_marginRight="@dimen/margin_right_left"
        android:textSize="@dimen/button_text_size"/>


</LinearLayout>